# rust-compression-server

./: .env.example  Cargo.toml
docs/: compression-flow.md  r2-setup.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  style.css
frontend/src/components/: FolderTreeNode.vue
frontend/src/stores/: drive.ts
frontend/src/types/: drive.ts
migrations/: 202603070001_create_users.sql  202603070002_create_files_and_sessions.sql  202603070003_add_is_compressed_to_files.sql  202603100004_create_upload_jobs.sql  202603100005_add_folders_and_folder_links.sql
src/: app_state.rs  auth.rs  config.rs  db.rs  file_compressor.rs  folder_watcher.rs  logging.rs  main.rs  server.rs
src/models/: file_model.rs  folder_model.rs  mod.rs  upload_job_model.rs  user_model.rs
src/routes/: admin_routes.rs  api_routes.rs  file_routes.rs  mod.rs
src/services/: auth_service.rs  file_service.rs  media_transcode_service.rs  mod.rs  r2_storage_service.rs  upload_job_worker.rs
web/admin/: files.html  login.html
web/assets/admin/: login.css  login.js
web/assets/app/: app.css  app.js  index.html
