[package]
name = "compression"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
notify = "4.0"
zstd = "0.13.3"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = {version= "1.7.0",features = ["full"]}
