[package]
name = "k2kCloud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
notify = "4.0"
zstd = "0.13.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
hyper = {version= "1.7.0",features = ["full"]}
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
